added tests for all routes, added todo CRUD operations and user ownership
